Add websiteName display to BaseLayout for improved context and accessibility

--- a/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
+++ b/apps/web-store-ssr-astro/src/layout/BaseLayout.astro
@@ -50,6 +50,8 @@ const websiteName = Astro.locals.WEBSITE?.name;
 		</div>
 		<div>
 			websiteId:{websiteId}
+			<br />
+			websiteName:{websiteName}
 		</div>
 		<script>
 			import { formatDate } from "@lib/utils/formatDate";
