--- a/apps/web-store-ssr-astro/src/pages/index.astro
+++ b/apps/web-store-ssr-astro/src/pages/index.astro
@@ -2,4 +2,6 @@
 import BaseLayout from "../layout/BaseLayout.astro";
 ---
 
-<BaseLayout title="Web Store index.astro" />
+<BaseLayout title="Web Store index.astro">
+	<h1>Web Store1111</h1>
+</BaseLayout>
