--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/global.css";
 import { LayoutHelpers } from "@/ui-plus";
-
+import { Card } from "@/components/ui/card";
 interface Props {
 	title: string;
 }
@@ -50,6 +50,24 @@ const SENTRY_RELEASE_ID = globalThis?.SENTRY_RELEASE?.id;
 
 	<body>
 		<div class="container mx-auto p-2 lg:p-6">
+			<!-- Header -->
+			<Card class="sticky top-0 z-50 shadow-sm">
+				<div class="container mx-auto flex items-center justify-between px-4 py-4">
+					<div class="flex items-center">
+						<div class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</div>
+						<!-- <nav class="hidden space-x-6 md:flex">
+						<a href="#" class="text-foreground/70 hover:text-foreground">Restaurants</a>
+						<a href="#" class="text-foreground/70 hover:text-foreground">Delivery</a>
+						<a href="#" class="text-foreground/70 hover:text-foreground">Pickup</a>
+						<a href="#" class="text-foreground/70 hover:text-foreground">About</a>
+					</nav> -->
+					</div>
+					<!-- <div class="flex items-center space-x-4">
+					<button class="text-foreground/70 hover:bg-muted hidden rounded-full px-4 py-2 md:block">Log in</button>
+					<button class="bg-primary text-primary-foreground hover:bg-primary/90 rounded-full px-4 py-2">Sign up</button>
+				</div> -->
+				</div>
+			</Card>
 			<slot />
 		</div>
 		<details class="m-8 mx-auto mb-48 w-fit text-xs">
