--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -1,8 +1,10 @@
 ---
 import "../styles/global.css";
 import LayoutHelpers from "ui-shadcn-vue/src/ui-plus/LayoutHelpers.vue";
-import { Card } from "@/components/ui/card";
 import { BASE_LINKS } from "@web-astro/clientScripts/links";
+import { MenuIcon } from "lucide-vue-next";
+import Drawer from "../components/Drawer.vue";
+
 interface Props {
 	title: string;
 }
@@ -47,39 +49,54 @@ const { title } = Astro.props;
 	</head>
 
 	<body>
-		<div class="container mx-auto p-2 lg:p-6">
-			<!-- Header -->
-			<Card class="sticky top-0 z-50 shadow-sm">
-				<div class="container mx-auto flex items-center justify-between px-4 py-4">
-					<div class="flex items-center">
-						<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
-						<!-- <nav class="hidden space-x-6 md:flex">
+		<div class="drawer">
+			<input id="my-drawer" type="checkbox" class="drawer-toggle" />
+			<div class="drawer-content">
+				<!-- PAGE CONTENT START HERE -->
+				<div class="container mx-auto p-2 lg:p-6">
+					<!-- Header -->
+					<div class="bg-card text-card-foreground relative sticky top-0 z-40 rounded-lg border shadow-sm">
+						<div class="container mx-auto flex items-center justify-between px-4 py-4">
+							<div class="flex items-center">
+								<label for="my-drawer" class="drawer-button"><MenuIcon class="mr-4 cursor-pointer" /></label>
+								<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
+								<!-- <nav class="hidden space-x-6 md:flex">
 						<a href="#" class="text-foreground/70 hover:text-foreground">Restaurants</a>
 						<a href="#" class="text-foreground/70 hover:text-foreground">Delivery</a>
 						<a href="#" class="text-foreground/70 hover:text-foreground">Pickup</a>
 						<a href="#" class="text-foreground/70 hover:text-foreground">About</a>
 					</nav> -->
-					</div>
-					<!-- <div class="flex items-center space-x-4">
+							</div>
+							<!-- <div class="flex items-center space-x-4">
 					<button class="text-foreground/70 hover:bg-muted hidden rounded-full px-4 py-2 md:block">Log in</button>
 					<button class="bg-primary text-primary-foreground hover:bg-primary/90 rounded-full px-4 py-2">Sign up</button>
 				</div> -->
+						</div>
+					</div>
+					<slot />
 				</div>
-			</Card>
-			<slot />
-		</div>
-		<details class="m-8 mx-auto w-fit text-xs">
-			<summary>⚙️</summary>
-			<div>
-				cache:
-				<span class="cache-date" data-cache-date={Date.now()}></span>
-				<br />
-				GIT: {globalThis?.SENTRY_RELEASE?.id}
-				<br />
-				websiteId:{Astro.locals.WEBSITE?.id}
+				<details class="m-8 mx-auto w-fit text-xs">
+					<summary>⚙️</summary>
+					<div>
+						cache:
+						<span class="cache-date" data-cache-date={Date.now()}></span>
+						<br />
+						GIT: {globalThis?.SENTRY_RELEASE?.id}
+						<br />
+						websiteId:{Astro.locals.WEBSITE?.id}
+					</div>
+				</details>
+				<script src="../clientScripts/cacheFormat.ts"></script>
+				<LayoutHelpers client:load />
+				<!-- PAGE CONTENT END HERE -->
 			</div>
-		</details>
-		<script src="../clientScripts/cacheFormat.ts"></script>
-		<LayoutHelpers client:load />
+
+			<div class="drawer-side z-50">
+				<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-4">
+					<Drawer client:visible />
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
