--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -60,17 +60,7 @@ const { title } = Astro.props;
 							<div class="flex items-center">
 								<label for="my-drawer" class="drawer-button"><MenuIcon class="mr-4 cursor-pointer" /></label>
 								<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
-								<!-- <nav class="hidden space-x-6 md:flex">
-						<a href="#" class="text-foreground/70 hover:text-foreground">Restaurants</a>
-						<a href="#" class="text-foreground/70 hover:text-foreground">Delivery</a>
-						<a href="#" class="text-foreground/70 hover:text-foreground">Pickup</a>
-						<a href="#" class="text-foreground/70 hover:text-foreground">About</a>
-					</nav> -->
 							</div>
-							<!-- <div class="flex items-center space-x-4">
-					<button class="text-foreground/70 hover:bg-muted hidden rounded-full px-4 py-2 md:block">Log in</button>
-					<button class="bg-primary text-primary-foreground hover:bg-primary/90 rounded-full px-4 py-2">Sign up</button>
-				</div> -->
 						</div>
 					</div>
 					<slot />
@@ -95,6 +85,7 @@ const { title } = Astro.props;
 				<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
 				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-4">
 					<Drawer client:visible />
+					<!-- {Array.from({ length: 100 }).map((_, i) => <div>{i}</div>)} -->
 				</div>
 			</div>
 		</div>
