--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -50,19 +50,19 @@ const { title } = Astro.props;
 
 	<body>
 		<div class="drawer">
-			<input id="my-drawer" type="checkbox" class="drawer-toggle" />
+			<input id="sidebar-drawer" type="checkbox" class="drawer-toggle" />
 			<div class="drawer-content">
 				<!-- PAGE CONTENT START HERE -->
-				<div class="container mx-auto p-2 lg:p-6">
-					<!-- Header -->
-					<div class="bg-card text-card-foreground relative sticky top-0 z-40 rounded-lg border shadow-sm">
-						<div class="container mx-auto flex items-center justify-between px-4 py-4">
-							<div class="flex items-center">
-								<label for="my-drawer" class="drawer-button"><MenuIcon class="mr-4 cursor-pointer" /></label>
-								<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
-							</div>
+				<!-- Header -->
+				<div class="bg-card text-card-foreground relative sticky top-0 z-40 border shadow-sm">
+					<div class="flex items-center justify-between px-4 py-4">
+						<div class="flex items-center">
+							<label for="sidebar-drawer" class="drawer-button"><MenuIcon class="mr-4 cursor-pointer" /></label>
+							<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
 						</div>
 					</div>
+				</div>
+				<div class="container mx-auto p-2 lg:p-6">
 					<slot />
 				</div>
 				<details class="m-8 mx-auto w-fit text-xs">
@@ -82,8 +82,8 @@ const { title } = Astro.props;
 			</div>
 
 			<div class="drawer-side z-50">
-				<label for="my-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-4">
+				<label for="sidebar-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-2">
 					<Drawer client:visible />
 					<!-- {Array.from({ length: 100 }).map((_, i) => <div>{i}</div>)} -->
 				</div>
